HB-5116: replacing dashes with underscores in sass variables

--- a/src/styles/_base.sass
+++ b/src/styles/_base.sass
@@ -1,13 +1,13 @@
 
 // Styles here will be applied to every periodic component. Treat this like you
 // would with the main `body...}` style in a normal app.
-.#{$prefix-component}#{$periodic-component-class}
+.#{$prefix-component}#{$periodic_component_class}
     margin: 0
     padding: 0
     font-family: $font
     font-weight: $font_weight_normal
-    font-size: $base-font-size
-    color: $preset-body-color
+    font-size: $base_font_size
+    color: $preset_body_color
     line-height: 1.5
     text-decoration: none
 
