--- a/src/styles/modules/_m-accordion.sass
+++ b/src/styles/modules/_m-accordion.sass
@@ -8,17 +8,17 @@
       grid-area: 2 / 1 / 2 / 1
 
     div.main
-      font-size: $font-size-m
-      font-weight: $font-weight-light
+      font-size: $font_size_m
+      font-weight: $font_weight_light
 
       div.content
         padding: $space-xxs 0 $space-xxs
 
   div.header
     display: flex
-    font-weight: $font-weight-bold
-    font-size: $font-size-m
-    line-height: $line-height-m
+    font-weight: $font_weight_bold
+    font-size: $font_size_m
+    line-height: $line_height_m
     color: $color-primary
     margin-bottom: $space-xxs
     cursor: pointer
@@ -33,8 +33,8 @@
       transition: transform .5s
 
   div.main
-    font-size: $font-size-m
-    font-weight: $font-weight-light
+    font-size: $font_size_m
+    font-weight: $font_weight_light
 
     div.content
       padding-bottom: $space-s
