--- a/src/styles/modules/_m-banner.sass
+++ b/src/styles/modules/_m-banner.sass
@@ -11,7 +11,7 @@
             background-color: #ff8f43
 
         &-grey
-            background-color: $color-gray-light
+            background-color: $color_gray_light
 
         &-yellow
             background-color: #ffcc1b
