--- a/src/styles/modules/_m-dropdown.sass
+++ b/src/styles/modules/_m-dropdown.sass
@@ -89,7 +89,7 @@
   +e('list-item')
     cursor: pointer
     font-size: 1.25rem
-    font-weight: $font-weight-light
+    font-weight: $font_weight_light
     +rem-fallback('padding', $space-xs)
     position: relative
 
@@ -122,4 +122,4 @@
       padding: 10px 15px
 
     input:not(:active)
-      border: 1px solid $color-gray-light
+      border: 1px solid $color_gray_light
