--- a/src/styles/modules/_m-login-form.sass
+++ b/src/styles/modules/_m-login-form.sass
@@ -33,8 +33,8 @@
       background-color: $color-white
       content: attr(data-content)
       display: inline-block
-      +rem-fallback('font-size', $font-size-m)
-      font-weight: $font-weight-light
+      +rem-fallback('font-size', $font_size_m)
+      font-weight: $font_weight_light
       padding: 0 $space-xxs
       position: relative
       top: -.85em
