--- a/src/styles/modules/_m-modal.sass
+++ b/src/styles/modules/_m-modal.sass
@@ -74,7 +74,7 @@
 
       header
         background: $color-white
-        border-bottom: 1px solid $color-gray-light
+        border-bottom: 1px solid $color_gray_light
         height: $space-xl
 
       main
