--- a/src/styles/modules/_m-npa-signup.sass
+++ b/src/styles/modules/_m-npa-signup.sass
@@ -1,5 +1,5 @@
 +b(npa-signup)
-  color: $color-gray-darker
+  color: $color_gray_darker
 
 
   +e(heading)
@@ -53,6 +53,6 @@
       grid-template-columns: 1fr 1fr
 
     li
-      font-weight: $font-weight-light
-      font-size: $font-size-m
+      font-weight: $font_weight_light
+      font-size: $font_size_m
       +rem-fallback(margin-bottom, $space-s)
