--- a/src/styles/modules/_m-offers-form.sass
+++ b/src/styles/modules/_m-offers-form.sass
@@ -1,5 +1,5 @@
 +b('offers-form')
-  font-size: $font-size-xxs
+  font-size: $font_size_xxs
 
   +e('link-blue')
     color: $color-primary
@@ -26,7 +26,7 @@
 
   +e('all-offers')
     +rem-fallback(padding, $space-s)
-    font-weight: $font-weight-light
+    font-weight: $font_weight_light
     background: $color-gray
 
     a
@@ -34,4 +34,4 @@
 
   +e('footnote')
     font-weight: $font_weight_normal
-    color: $color-gray-light
+    color: $color_gray_light
