--- a/src/styles/modules/_m-pet-card.sass
+++ b/src/styles/modules/_m-pet-card.sass
@@ -1,5 +1,5 @@
 +b(pet-card)
-  background: $color-gray-lighter
+  background: $color_gray_lighter
   border-radius: $radius_l
   box-shadow: 0 0 4px #b3b3b3
   padding: $space-xxs
@@ -27,7 +27,7 @@
       border-bottom-right-radius: $radius_l
       color: $color-white
       text-align: center
-      font-size: $font-size-xs
+      font-size: $font_size_xs
       display: flex
       align-items: center
       justify-content: center
@@ -59,8 +59,8 @@
       text-overflow: ellipsis
 
     p
-      font-weight: $font-weight-light
-      line-height: $line-height-s
+      font-weight: $font_weight_light
+      line-height: $line_height_s
       margin: 0
       white-space: nowrap
       overflow: hidden
@@ -68,4 +68,4 @@
 
       .orange
         color: #FF8F43
-        font-weight: $font-weight-normal
+        font-weight: $font_weight_normal
