--- a/src/styles/modules/_m-popup.sass
+++ b/src/styles/modules/_m-popup.sass
@@ -34,7 +34,7 @@
     +font-size(14)
     +rem-fallback('line-height', 22px)
     +rem-fallback('padding', $space-s)
-    font-weight: $font-weight-light
+    font-weight: $font_weight_light
     position: relative
 
   +e(bubble-container)
