--- a/src/styles/modules/_m-radio-buttons.sass
+++ b/src/styles/modules/_m-radio-buttons.sass
@@ -87,7 +87,7 @@
           background: $color_white
 
   +element('label')
-    +rem-fallback('font-size', $font-size-m)
+    +rem-fallback('font-size', $font_size_m)
     +rem-fallback('border-radius', $radius_l)
     +rem-fallback('line-height', $line_height_m_v2)
     +rem-fallback('padding-left', $space-l)
@@ -95,7 +95,7 @@
     position: relative
     color: $color-black
     display: inline-block
-    font-weight: $font-weight-light
+    font-weight: $font_weight_light
     width: 100%
 
 
