--- a/src/styles/modules/_m-search-form.sass
+++ b/src/styles/modules/_m-search-form.sass
@@ -16,9 +16,9 @@
       text-align: center
       cursor: pointer
       padding: $space-xxs
-      font-size: $font-size-s
+      font-size: $font_size_s
       font-family: $font
-      font-weight: $font-weight-bold
+      font-weight: $font_weight_bold
       color: #b3b3b3
 
       div.underline
