--- a/src/styles/modules/_m-table-of-contents.sass
+++ b/src/styles/modules/_m-table-of-contents.sass
@@ -11,7 +11,7 @@
       column-count: 3
 
     li
-      font-weight: $font-weight-light
+      font-weight: $font_weight_light
       padding: 15px 0
 
     .#{$prefix-component}textlink
